--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,12 @@
-<<h1>Hello, Rails!</h1>
-<%= link_to "My Blog", products_path %>
+<h1>Welcome in ruby on rails</h1>
+<%= link_to "products", products_path %> |
+<%= link_to "category", categories_path %> |
+<%= link_to "create products",new_product_path %> |
+<%= link_to "create category",  new_category_path %> 
+
+
+
+
+
+
+
