--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,5 +1,4 @@
-<div id="flash"></div>
-<%= form_for(@product,:multipart => true) do |f| %>
+<%= form_for(@product) do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -20,8 +19,10 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+
+
   <div>
-    <%= f.file_field :avatar %>
+    <%= f.select "category_id", options_for_select(Category.all.collect{|product| [product.name,product.id]}) %>
   </div>
   <div class="actions">
     <%= f.submit %>
