--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,19 @@
 
 <h1>Listing Products</h1>
 
+
+<%=form_tag products_path, :method => 'get' do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+    Download:
+  <%= link_to "CSV", products_path(format: "csv") %> 
+  </p>
+<% 
+end %>
+<% if !params[:search].blank? %>
+<strong><%=  @products.count %> Results has been found </strong> 
+<% end %>
 <table>
   <thead>
     <tr>
@@ -11,14 +24,18 @@
     </tr>
   </thead>
 
+
+
   <tbody>
     <% @products.each do |product| %>
       <tr>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= link_to 'Show', product %></td>
+        <%if current_user.id== product.user_id%>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end%>
       </tr>
     <% end %>
   </tbody>
