--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -29,7 +29,7 @@ end %>
   <tbody>
     <% @products.each do |product| %>
       <tr>
-        <td><%= product.name %></td>
+        <td class="product-name" id="<%= product.name %>"><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= link_to 'Show', product %></td>
         <%if current_user.id== product.user_id%>
@@ -44,3 +44,12 @@ end %>
 <br>
 
 <%= link_to 'New Product', new_product_path %>
+<script type="text/javascript">
+  $('.product-name').click(function() { 
+    $.ajax({
+        type: "POST",
+        url: '<%= products_ajax_call_path %>', //sumbits it to the given url of the form
+        data: {data: this.id},
+    })
+});
+</script>
